Исправила ошибки